--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aws": "^0.0.3-2",
     "aws-sdk": "^2.1692.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
